# HPRDMM

./: HPRDMM.pro  README  README.md  TODO
src/: CMakeLists.txt  main.cpp
src/gui/: HPRDmmCfg.cpp  HPRDmmCfg.h  HPRDmmCfg.ui  HPRDmmCfg.ui.old  HPRDmmDialog.cpp  HPRDmmDialog.h  HPRDmmDialog.ui  HPRDmmFunc.cpp  HPRDmmFunc.h  HPRDmmFunc.ui  HPRDmmSprof.cpp  HPRDmmSprof.h  HPRDmmSprof.ui
src/resources/: HPRDmm.old  HPRDmm.rc
